--- a/style.css
+++ b/style.css
@@ -47,7 +47,9 @@
   body {
     height: 100vh;
     font-family: 'Roboto', sans-serif;
+    position: relative;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
   }
@@ -248,6 +250,20 @@
     border-radius: 50px;
   }
 
+  /* creator and frontend mentor section styling  */
+  .attribution { 
+
+    font-size: 11px;
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+     }
+  .attribution a { 
+    color: hsl(228, 45%, 44%);
+   }
 
   /* ================================================== */
   /* media query starts here */
@@ -290,6 +306,10 @@
       height: 19%;
   
     }
+    .attribution { 
+
+      bottom: 0;
+       }
   }
-  
+
   
